Move command name and description to static fields