@@ -4,6 +4,7 @@ import hr.fer.zemris.java.hw06.shell.Environment;
 import hr.fer.zemris.java.hw06.shell.ShellCommand;
 import hr.fer.zemris.java.hw06.shell.ShellStatus;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -14,6 +15,19 @@ import java.util.List;
  *
  */
 public class ExitCommand implements ShellCommand {
+
+    /**
+     * The name of this command.
+     */
+    private static final String NAME = "exit";
+
+    /**
+     * The description of this command.
+     */
+    private static final List<String> DESCRIPTION = List.of(
+            "exit\n",
+            "Terminates the program."
+    );
 
     @Override
     public ShellStatus executeCommand(Environment env, String arguments) {
@@ -27,14 +41,11 @@ public class ExitCommand implements ShellCommand {
 
     @Override
     public String getCommandName() {
-        return "exit";
+        return NAME;
     }
 
     @Override
     public List<String> getCommandDescription() {
-        return List.of(
-                "exit\n",
-                "Terminates the program."
-        );
+        return Collections.unmodifiableList(DESCRIPTION);
     }
 }
